# fastapi-microservices

./: .dockerignore  compose.yaml  database.db  main.py  promtail-config.yaml  pyproject.toml
.github/workflows/: ci.yaml  staging.yaml
K8s/: user-api.yaml
K8s/inventory-service/: inventory-service-configmap.yaml  inventory-service-deployment.yaml  inventory-service-service.yaml
K8s/jaeger/: jaeger-deployment.yaml  jaeger-service.yaml
K8s/order-service/: order-service-configmap.yaml  order-service-deployment.yaml  order-service-service.yaml
K8s/postgres/: postgres-deployment.yaml  secret.yaml
K8s/product-service/: product-service-configmap.yaml  product-service-deployment.yaml  product-service-service.yaml
K8s/rabbitmq/: rabbitmq-deployment.yaml  rabbitmq-secret.yaml
K8s/user-service/: user-service-configmap.yaml  user-service-deployment.yaml  user-service-secret.yaml  user-service-service.yaml
protos/: product.proto
services/inventory-service/: Dockerfile  main.py  pyproject.toml
services/inventory_service/: Dockerfile  main.py  pyproject.toml
services/order-service/: Dockerfile  main.py
services/order_service/: Dockerfile  main.py  pyproject.toml
services/product-service/: Dockerfile  main.py  pyproject.toml
services/product_service/: Dockerfile  main.py  pyproject.toml
services/tests/: test_main.py
services/user-service/: Dockerfile  db.py  main.py  models.py  pyproject.toml
services/user_service/: Dockerfile  auth.py  db.py  main.py  pyproject.toml
services/user_service/tests/: test_main.py
shared/: jwt_utils.py
