[project]
name = "fastapi-microservices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
]

[tool.uv.workspace]
members = [
    "services/user_service",
    "services/product_service",
    "services/order_service",
    "services/inventory_service",
]
