[project]
name = "user_service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-sdk>=1.41.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
